webkitgtk (2.3.1-1) UNRELEASED; urgency=low

  [ Michael Biebl ]
  * debian/rules:
    + Replace another occurence of findstring with filter.

  [ Emilio Pozuelo Monfort ]
  * debian/watch,
    debian/gbp.conf:
    + Update for 2.3 packages in experimental.
  * New upstream development release.
  * debian/control,
    debian/rules:
    + Enable wayland support on linux.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 30 Oct 2013 00:49:46 +0100

webkitgtk (2.2.1-1) unstable; urgency=low

  * debian/gbp.conf:
    + Added.
  * New upstream stable release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 29 Oct 2013 20:44:42 +0100

webkitgtk (2.2.0-2) unstable; urgency=low

  * debian/rules:
    + Disable JIT on mips, should fix the FTBFS.
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 14 Oct 2013 19:00:57 +0200

webkitgtk (2.2.0-1) experimental; urgency=low

  * New upstream stable release.
  * debian/control:
    + Remove gail build dependencies, no longer needed.
  * debian/patches:
    + Refreshed.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 09 Oct 2013 16:01:05 +0200

webkitgtk (2.1.91-1) experimental; urgency=low

  [ Michael Biebl ]
  * debian/rules:
    + Use filter instead of findstring to match the current architecture as
      findstring also matches substrings so we accidentally used stabs debug
      symbols for i386 and amd64 and disabled jit for mips.

  [ Emilio Pozuelo Monfort ]
  * debian/rules:
    + Use CPPFLAGS instead of JSC_CPPFLAGS to disable JIT and MacroAssembler
      as JSC_CPPFLAGS is no longer honored by the build system. This fixes
      the build (again) on ia64 powerpc sparc s390 and s390x.
  * debian/patches/40_hppa_platform_h.patch,
    debian/patches/41_hppa_build_fix.patch,
    debian/rules:
    + Add support for HPPA. Thanks to John David Anglin for the patches.
      Closes: #721206.
  * debian/patches/20_mesa-llvmpipe-crash.patch,
    debian/patches/25_bison_2.6_ftbfs.patch: