@@ -7,8 +7,8 @@ Uploaders: Mike Hommey <glandium@debian.org>, Gustavo Noronha Silva <kov@debian.
 Build-Depends: gawk,
                chrpath,
                flex (>= 2.5.33),
-               gcc-4.7,
-               g++-4.7,
+               gcc-4.8,
+               g++-4.8,
                debhelper (>= 9),
                dh-autoreconf,
                libglib2.0-dev (>= 2.36.0),
